[gd_scene load_steps=4 format=2]

[ext_resource path="res://ammo/bullet.gd" type="Script" id=2]
[ext_resource path="res://assets/bullets/single_fire_bullet.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.613, 7 )

[node name="Bullet" type="Area2D"]
collision_layer = 16
collision_mask = 2
script = ExtResource( 2 )

[node name="Fire" type="Sprite" parent="."]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="AliveTimer" type="Timer" parent="."]
wait_time = 0.2
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bullet_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="AliveTimer" to="." method="_on_AliveTimer_timeout"]
